# strongswan

./: Android.mk  README.md  autogen-osx.sh  configure-osx  configure.ac  pq_ldn_ipsec.conf  pq_nyc_ipsec.conf  pq_update.sh  pqperf.sh  pqreadme.txt  pqtest.sh
conf/plugins/: vici.opt
src/charon-tkm/src/tkm/: tkm_keymat.c
src/frontends/android/app/: build.gradle
src/frontends/osx/charon-xpc/: charon-xpc-Info.plist  charon-xpc.c  xpc_dispatch.c  xpc_logger.c
src/frontends/osx/strongSwan/: ConnController.h  ConnController.m  Control.m  strongSwan-Info.plist
src/frontends/osx/strongSwan.xcodeproj/: project.pbxproj
src/libcharon/: Android.mk  Makefile.am
src/libcharon/bus/: bus.h
src/libcharon/config/: child_cfg.c  child_cfg.h  ike_cfg.c  ike_cfg.h  proposal.c  proposal.h
src/libcharon/encoding/: message.c  parser.c
src/libcharon/encoding/payloads/: ke_payload.c  notify_payload.c  notify_payload.h  payload.c  payload.h  proposal_substructure.c  qske_payload.c  qske_payload.h
src/libcharon/plugins/ha/: ha_dispatcher.c  ha_message.h
src/libcharon/plugins/kernel_netlink/: kernel_netlink_ipsec.c  kernel_netlink_shared.c
src/libcharon/plugins/stroke/: stroke_list.c
src/libcharon/plugins/vici/: README.md  vici_control.c  vici_cred.c  vici_logger.c  vici_plugin.c  vici_query.c
src/libcharon/sa/: ike_sa.c  ike_sa.h  keymat.h
src/libstrongswan/: Android.mk  Makefile.am
src/libstrongswan/crypto/: crypto_factory.c  crypto_factory.h  diffie_hellman.c  diffie_hellman.h  quantum_safe.c  quantum_safe.h  transform.c  transform.h
src/libstrongswan/plugins/: plugin_feature.c  plugin_feature.h
src/libstrongswan/plugins/nistpqc/: Makefile.am  nistpqc_ke.c  nistpqc_ke.h  nistpqc_plugin.c  nistpqc_plugin.h
src/libstrongswan/plugins/ntru_prime/: Makefile.am  ntru_prime.c  ntru_prime.h  ntru_prime_fisher_yates_shuffle.c  ntru_prime_ke.c  ntru_prime_ke.h  ntru_prime_math_utils.c  ntru_prime_math_utils.h  ntru_prime_plugin.c  ntru_prime_plugin.h  ntru_prime_pq_random.c  ntru_prime_qske.c  ntru_prime_qske.h  ntru_prime_z_polynomial.c
src/libstrongswan/plugins/ntruprime/: Makefile.am  ntruprime.c  ntruprime.h  ntruprime_fisher_yates_shuffle.c  ntruprime_fisher_yates_shuffle.h  ntruprime_ke.c  ntruprime_ke.h  ntruprime_math_utils.c  ntruprime_plugin.c  ntruprime_plugin.h  ntruprime_pq_random.c  ntruprime_pq_random.h  ntruprime_qske.c  ntruprime_qske.h  ntruprime_z_polynomial.c  ntruprime_z_polynomial.h
src/starter/: confread.c
src/swanctl/: swanctl.opt
src/swanctl/commands/: list_sas.c  load_creds.c
testing/scripts/: build-baseimage  build-guestkernel
testing/scripts/recipes/: 013_strongswan.mk
(+95 files in other folders)
